fix: Change columns on small screen

--- a/src/app/room/add-card-deck-modal/add-card-deck-modal.component.scss
+++ b/src/app/room/add-card-deck-modal/add-card-deck-modal.component.scss
@@ -1,3 +1,5 @@
+@import '../../common.scss';
+
 .dialog-content {
   display: flex;
   flex-direction: column;
@@ -65,6 +67,10 @@
   mat-form-field {
     flex: 1;
     min-width: 150px;
+  }
+
+  @include extraSmallScreen {
+    grid-template-columns: 1fr;
   }
 }
 
